@@ -64,3 +64,4 @@ Minseok Kim <minseok3.kim@samsung.com>
 Jean-Philippe André <jpeg@videolan.org>
 JiHyeon Seol <jihyeon.seol@samsung.com>
 Flavio Ceolin <flavio.ceolin@profusion.mobi>
+Igor Murzov <e-mail@date.by>
